syntax = "proto3";
package meta;

message Timestamp {
    int64 physical = 1;
    int64 logical = 2;
}

message BackupMeta {
    string cluster_version = 1;
    uint64 id_alloc = 2;
    Timestamp safe_point = 3;
    repeated RangeMeta ranges = 4;
}

message RangeMeta {
    bytes start_key = 1;
    bytes end_key = 2;
    Timestamp check_point = 3;
}
